tests/NormalTests/paczka1/fuzzy1/12458426.err
Error in line 2: e7omT3 S966 38,0
Error in line 5: e7omT3 S163 28,2
Error in line 16: VGpv8rajsR7 S584 80,6
Error in line 27: VGpv8rajsR7 S966 85,4
Error in line 33: e7omT3 S757 16,0
Error in line 28: gY0cAFN6v S163 3,8
